--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">horse-racing-client</string>
+    <string name="app_name">Uma Musume Pretty Derby</string>
 </resources>
